<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_back"
    android:orientation="vertical"
    tools:context=".ui.TimeThemeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/DIMEN_60PX"
        android:text="@string/my_time_theme"
        android:layout_marginTop="@dimen/DIMEN_80PX"
        android:layout_marginLeft="@dimen/DIMEN_150PX"
        />

    <TextView
        style="@style/time_theme_textview_35px"
        android:text="@string/time_theme_describle"
        android:layout_marginTop="@dimen/DIMEN_40PX"
        android:layout_marginLeft="@dimen/DIMEN_150PX"
        />

    <RelativeLayout
        android:layout_width="@dimen/DIMEN_1437PX"
        android:layout_height="@dimen/DIMEN_260PX"
        android:layout_marginLeft="@dimen/DIMEN_150PX"
        android:layout_marginTop="@dimen/DIMEN_45PX"
        android:visibility="visible"
        android:background="@drawable/theme_big_bg"
        >

        <LinearLayout
            android:id="@+id/ll_child_pic"
            android:layout_width="@dimen/DIMEN_120PX"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/DIMEN_65PX"
            >
            <ImageView
                android:id="@+id/iv_child"
                android:layout_width="@dimen/DIMEN_100PX"
                android:layout_height="@dimen/DIMEN_100PX"
                android:src="@drawable/theme_child_big"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/DIMEN_50PX"
                android:layout_marginTop="@dimen/DIMEN_20PX"
                android:text="@string/ui_version_child"
                android:textSize="@dimen/DIMEN_35PX"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/ll_child_pic"
            android:layout_marginLeft="@dimen/DIMEN_60PX"
            android:layout_gravity="center_vertical"
            >

            <TextView
                style="@style/time_theme_textview_35px"
                android:text="@string/time_theme_continue_time"
                android:layout_marginLeft="@dimen/DIMEN_20PX"
                />
            <EditText
                android:id="@+id/child_time_continue"
                style="@style/time_theme_edittext"
                />
            <LinearLayout
                style="@style/time_theme_arrow_ll"
                >
                <ImageView
                    android:id="@+id/child_time_continue_up"
                    style="@style/time_theme_arrow_up"
                    />
                <ImageView
                    android:id="@+id/child_time_continue_down"
                    style="@style/time_theme_arrow_down"
                    />
            </LinearLayout>

            <TextView
                style="@style/time_theme_textview_35px"
                android:layout_height="match_parent"
                android:text="@string/hour"
                />

            <TextView
                style="@style/time_theme_textview_35px"
                android:text="@string/time_theme_start_time"
                android:layout_marginLeft="@dimen/DIMEN_100PX"
                />
            <EditText
                android:id="@+id/child_time_hour"
                style="@style/time_theme_edittext"
                />
            <LinearLayout
                style="@style/time_theme_arrow_ll"
                >
                <ImageView
                    android:id="@+id/child_time_hour_up"
                    style="@style/time_theme_arrow_up"
                    />
                <ImageView
                    android:id="@+id/child_time_hour_down"
                    style="@style/time_theme_arrow_down"
                    />
            </LinearLayout>
            <TextView
                style="@style/time_theme_textview_35px"
                android:text=":"
                android:layout_marginLeft="@dimen/DIMEN_20PX"
                />
            <EditText
                android:id="@+id/child_time_min"
                style="@style/time_theme_edittext"
                />

            <LinearLayout
                style="@style/time_theme_arrow_ll"
                >
                <ImageView
                    android:id="@+id/child_time_min_up"
                    style="@style/time_theme_arrow_up"
                    />
                <ImageView
                    android:id="@+id/child_time_min_down"
                    style="@style/time_theme_arrow_down"
                    />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <TextView
        style="@style/time_theme_textview_35px"
        android:layout_marginTop="@dimen/DIMEN_50PX"
        android:text="@string/time_theme_cur_theme_describle"
        android:layout_marginLeft="@dimen/DIMEN_150PX"
        />

    <LinearLayout
        android:layout_width="@dimen/DIMEN_1014PX"
        android:layout_height="@dimen/DIMEN_127PX"
        android:layout_marginLeft="@dimen/DIMEN_150PX"
        android:layout_gravity="center_vertical"
        android:visibility="visible"
        android:background="@drawable/theme_small_bg"
        android:layout_marginTop="@dimen/DIMEN_20PX"
        >
        <ImageView
            android:layout_width="@dimen/DIMEN_60PX"
            android:layout_height="@dimen/DIMEN_60PX"
            android:src="@drawable/theme_child"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/DIMEN_65PX"
            />
        <TextView
            style="@style/time_theme_textview_35px"
            android:layout_marginLeft="@dimen/DIMEN_30PX"
            android:text="@string/ui_version_child"
            />
        <ImageView
            android:layout_width="@dimen/DIMEN_1PX"
            android:layout_height="@dimen/DIMEN_30PX"
            android:layout_marginLeft="@dimen/DIMEN_40PX"
            android:background="@color/white"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:id="@+id/tv_child_time"
            style="@style/time_theme_textview_35px"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/DIMEN_65PX"
            android:text="当日10:30-当日20:30"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/DIMEN_1014PX"
        android:layout_height="@dimen/DIMEN_127PX"
        android:layout_marginLeft="@dimen/DIMEN_150PX"
        android:layout_gravity="center_vertical"
        android:background="@drawable/theme_small_bg"
        android:layout_marginTop="@dimen/DIMEN_20PX"
        >
        <ImageView
            android:layout_width="@dimen/DIMEN_60PX"
            android:layout_height="@dimen/DIMEN_60PX"
            android:src="@drawable/theme_public"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/DIMEN_65PX"
            />
        <TextView
            style="@style/time_theme_textview_35px"
            android:layout_marginLeft="@dimen/DIMEN_30PX"
            android:text="大众版"/>
        <ImageView
            android:layout_width="@dimen/DIMEN_1PX"
            android:layout_height="@dimen/DIMEN_30PX"
            android:layout_marginLeft="@dimen/DIMEN_40PX"
            android:background="@color/white"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:id="@+id/tv_public_time"
            style="@style/time_theme_textview_35px"
            android:layout_height="match_parent"
            android:text="当日10:30-当日20:30"
            android:layout_marginLeft="@dimen/DIMEN_65PX"
            />
    </LinearLayout>
</LinearLayout>
